tests/errors/frontend/type/condition.fpcore
(FPCore (x)
 (if x (/ (sin x) x) 1.0))
